fixed link styling in dark mode

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -103,9 +103,11 @@ p {
     }
 
     a {
-        color: #009CFF;
+        &:link {
+            color: #009CFF;
+        }
 
-        &::visited {
+        &:visited {
             color: #E561FF;
         }
     }
